tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use9.ic
class A
{
	static void main(string[] args) { }
	int[] a()
	{
		int[] b;
		return b;
	}
}